# yuyang-management

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  yuyang.code-workspace
.github/workflows/: backend_test.yml  build_and_push_ghcr.yml
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/schemas/: bill.py  contract.py  customer.py  user.py
backend/app/api/v1/: __init__.py  bill.py  contracts.py  customers.py  hello.py  users.py
backend/app/core/: security.py
backend/app/database/: migrate.py  session.py
backend/app/database/models/: bill.py  contract.py  customer.py  user.py
backend/app/pdf/: __init__.py  generator.py
backend/app/pdf/templates/: invoice.html  styles.css
backend/app/services/: bill_service.py  contract_service.py  customer_service.py  user_service.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 318ec9f22ed3_init.py  3dc91ae6a2ad_init.py  665952fc9d6c_init.py  811510926611_add_bill_table.py  add_bill_item_table.py  add_bill_previous_bill_number.py  add_bill_tax_amount_monthly_rent_invoice_type.py  add_billing_interval_values.py  add_contract_invoice_type.py  add_contract_status_trial_ended.py  add_customer_status.py  bill_items_to_jsonb.py  bill_notes_to_varchar200.py  bill_number_as_primary_key.py  customer_allow_null_invoice_contact.py  drop_bill_monthly_rent.py  ea68ff45c522_init.py  make_bill_due_date_nullable.py  migrate_contract_trial_to_pending.py  remove_bill_id_add_bill_number.py
backend/scripts/: __init__.py  generate_fake_data.py
backend/tests/: conftest.py  test_api_v1.py  test_bills_api.py  test_contract_service.py  test_contracts_api.py  test_customer_service.py  test_customers_api.py  test_main.py  test_user_service.py  test_users_api.py
deploy/: README.md
deploy/base/: kustomization.yaml  namespace.yaml
deploy/base/backend/: deployment.yaml  service.yaml
deploy/base/frontend/: deployment.yaml  service.yaml
deploy/base/postgres/: statefulset.yaml
deploy/components/postgres-hostpath/: kustomization.yaml  postgres-hostpath.patch.yaml
docs/plans/: bill-fake-data-generation.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
services/generate_quotation/: README.md  csv_reader.py  json_processor.py  main.py  pdf_generator.py
(+23 files in other folders)
