[project]
name = "yuyang-api"
version = "1.0.0"
description = "宇陽科技管理系統 RESTful API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.12.4",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "mypy>=1.5.0",
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # error, flake, isort, pyupgrade
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
