[project]
name = "yuyang-api"
version = "1.0.0"
description = "宇陽科技管理系統 RESTful API"
requires-python = "==3.12"
dependencies = [
    "fastapi==0.109.0",
    "pydantic[email]==2.12.4",
    "pydantic-settings==2.12.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "asyncpg==0.30.0",
    "alembic==1.17.2",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.25.0",
    "ruff>=0.14.5",
    "nodeenv==1.9.1",
    "pyright==1.1.407",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # error, flake, isort, pyupgrade
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__", "**/.*", "tests"]
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "basic"
